# PdfLibrary

./: .gitignore  CMakeLists.txt  PdfLibrary.sln  README.md
Application/: Application.vcxproj  main.cpp
Datatypes/: DataTypes.h  Datatypes.vcxproj  Datatypes.vcxproj.filters
Datatypes/src/: Dictionary.cpp  Dictionary.h  String.cpp  String.h
Decoder/: Decoder.vcxproj  Decoder.vcxproj.filters  PDFDecoder.h
Decoder/src/: DataTypes.h  Decoder.cpp  Decoder.h  Helpers.cpp  Helpers.h  Objects.h  Types.h
include/: CMakeLists.txt
include/pdflib/: CMakeLists.txt  pdflib.h
include/pdflib/src/: error.cpp  error.h
include/pdflib/src/decoder/: decoder.cpp  decoder.h  file.cpp  file.h
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
